name:                rtail
version:             0.1.0
synopsis:            web scale log tailing
license:             AllRightsReserved
author:              Kim Altintop
maintainer:          kim@soundcloud.com
build-type:          Simple
cabal-version:       >=1.8

executable rtaild
  main-is:           Main.hs
  build-depends:     base >= 4.5 && < 5, bytestring, zeromq3-haskell

  hs-source-dirs:    rtaild
  ghc-options:       -Wall -O2 -threaded -rtsopts

executable rtailp
  main-is:           Main.hs
  build-depends:     base >= 4.5 && < 5, bytestring, zeromq3-haskell

  hs-source-dirs:    rtailp
  ghc-options:       -Wall -O2 -threaded -rtsopts

executable rtail
  main-is:           Main.hs
  build-depends:     base >= 4.5 && < 5, bytestring, zeromq3-haskell

  ghc-options:       -Wall -O2 -threaded -rtsopts
